# clickscript

./: .gitignore  Cargo.toml  LICENSE.md  README.md  app.go  example.click.json  example.json  go.mod  main.go  package-lock.json  package.json  runner.go  svelte.config.js  test.js  tsconfig.json  wails.json
actions/: README.md  jsr.json  package.json  tsconfig.json
actions/src/: break.ts  condition.ts  function.ts  index.ts  log.ts  repeat.ts  set.ts  text.ts
clickscript-starter/: index.html  package-lock.json  package.json
clickscript-starter/src/components/: app-home.js
clickscript-starter/src/components/app-home/: app-home.tsx
compiler/: compiler.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/components/: Dropdown.svelte  Popup.svelte  Step.svelte
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: app.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/actions/: break.ts  call.ts  condition.ts  function.rs  function.ts  handler.rs  index.ts  log.ts  loops.rs  mod.rs  print.rs  repeat.ts  set.ts  text.ts  tsconfig.json  variables.rs
src-tauri/src/runner/: run.rs
src-tauri/src/types/: types.rs
src/components/: Greet.svelte
src/routes/: +page.svelte
src/runner/: run.rs
src/types/: types.rs
